# comp_323

./: .gitignore
week1/examples/01-intro-arcade/: save.json
week1/examples/01-intro-arcade/intro_arcade/: README.md  game.py
week11/: Readme.md
week11/c++/: Readme.md
week11/c++/shooter-arena/v0.1/: CMakeLists.txt
week12/: Readme.md
week12/c++/: Readme.md
week12/c++/shooter-arena/v0.2/: CMakeLists.txt
week12/c++/shooter-arena/v0.2/include/: Arena.h  config.h.in
week12/c++/shooter-arena/v0.2/src/: Player.cpp  main.cpp
week13/: Readme.md
week13/c++/: Readme.md
week13/c++/v0.3/: CMakeLists.txt
week13/c++/v0.3/include/: Textures.h
week13/c++/v0.3/src/: CreateMob.cpp  GenerateBackground.cpp  Mummy.cpp  Player.cpp  main.cpp
week13/c++/v0.4/: CMakeLists.txt
week13/c++/v0.4/include/: Arena.h  Player.h  Projectile.h
week13/c++/v0.4/src/: Player.cpp  Projectile.cpp  main.cpp
week14/: Readme.md
week14/c++/: Readme.md
week14/c++/v0.5/: CMakeLists.txt
week14/c++/v0.5/src/: Mummy.cpp  Player.cpp  Projectile.cpp  main.cpp
week14/c++/v0.6/: CMakeLists.txt
week14/c++/v0.6/include/: Mummy.h
week14/c++/v0.6/src/: Textures.cpp  main.cpp
week2/examples/02-movement-bounds/movement_bounds/: README.md  game.py
week3/: Readme.md
week3/examples/03-input-control-feel/: README.md
week3/examples/03-input-control-feel/input_control_feel/: README.md  game.py
week3/pygame/templates/basic1/: Readme.md  basictemplate1.py
week3/pygame/templates/basic2/: Readme.md
week3/pygame/templates/basic3/: Readme.md
week4/examples/04-live-build-collision-loop/: README.md  main.py
week4/examples/04-live-build-collision-loop/live-build-collision-loop/: game.py
week4/examples/04-sprites-collisions/: README.md  main.py
week4/examples/04-sprites-collisions/sprites_collisions/: README.md  __init__.py  game.py
week5/: Readme.md
week5/examples/05-animation-feedback/: README.md
week5/examples/05-animation-feedback/anim_feedback/: game.py
week5/examples/legacy/: README.md
week5/examples/legacy/animating-example1/: animatingsprites1.py
week5/examples/legacy/animating-example2/: animatingsprites2.py
week5/examples/legacy/shooter-0.6/: shooter0.6.py
week5/examples/legacy/shooter-0.7/: shooter0.7.py
week5/pygame/collision-detection/: Readme.md
week5/pygame/sprites/: Readme.md
week6/: Readme.md
week9/: Readme.md
week9/c++/basic-textures/: Readme.md
week9/c++/basic-textures/v0.1/: CMakeLists.txt
week9/c++/basic-textures/v0.1/include/: Player.h  config.h.in
week9/c++/basic-textures/v0.1/src/: Player.cpp  main.cpp
(+4 files in other folders)
