cmake_minimum_required(VERSION 3.12 FATAL_ERROR)

# Set project name and version
project(BasicTextures VERSION 0.1)

# Set C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

# Enable debug symbols by default
if(NOT CMAKE_BUILD_TYPE)
  #set(CMAKE_BUILD_TYPE Debug 
  set(CMAKE_BUILD_TYPE Release
    CACHE STRING 
      "Choose the type of build (Debug or Release)" 
      FORCE
    )
endif()

# Generate config.h
configure_file(include/config.h.in config.h)

# Find SFML shared libraries
find_package(SFML COMPONENTS system window graphics audio network REQUIRED)

# Compile executable
add_executable(BasicTextures src/main.cpp src/Player.cpp)

# Set include directory search paths
target_include_directories(BasicTextures PRIVATE 
	"${PROJECT_BINARY_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
)

# Set executable RPATH
set_target_properties(BasicTextures
  PROPERTIES
      INSTALL_RPATH
        "${CMAKE_INSTALL_PREFIX}/lib"
  )

# Link executable to required SFML libraries
target_link_libraries(BasicTextures sfml-system sfml-window sfml-graphics sfml-audio sfml-network)

# Install target
install(TARGETS BasicTextures DESTINATION bin)
